# EasyPR4Android

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/yanyu/com/mrcar/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/yanyu/com/mrcar/: BeepManager.java  CVCameraActivity.java  CameraActivity.java  MRAssetUtil.java  MRCar.java  MRMediaFileUtil.java  MRPlate.java  PhotoActivity.java  ViewfinderView.java
app/src/main/jni/: CvText.cpp  jni.cpp  main.cpp  mrcar.cpp  mrcar.h  util.h
app/src/main/jni/include/: CvText.h
app/src/main/jni/include/easypr/: config.h
app/src/main/jni/include/easypr/core/: character.hpp  chars_segment.h  core_func.h  plate.hpp  plate_locate.h  plate_recognize.h
app/src/main/jni/include/opencv2/: cvconfig.h
app/src/main/jni/src/core/: chars_identify.cpp  chars_recognise.cpp  core_func.cpp  plate_judge.cpp  plate_recognize.cpp
app/src/main/res/layout/: activity_camera.xml  activity_cvcamera.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/yanyu/com/mrcar/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary320/: AndroidManifest.xml  build.gradle
openCVLibrary320/src/org/opencv/android/: JavaCameraView.java  OpenCVLoader.java
openCVLibrary320/src/org/opencv/aruco/: Aruco.java  Board.java  CharucoBoard.java  DetectorParameters.java  Dictionary.java  GridBoard.java
openCVLibrary320/src/org/opencv/bioinspired/: Bioinspired.java  Retina.java  RetinaFastToneMapping.java  TransientAreasSegmentationModule.java
openCVLibrary320/src/org/opencv/calib3d/: Calib3d.java
openCVLibrary320/src/org/opencv/core/: Core.java
openCVLibrary320/src/org/opencv/dnn/: Dnn.java  Layer.java  Net.java
openCVLibrary320/src/org/opencv/features2d/: AKAZE.java  AgastFeatureDetector.java  BRISK.java  FastFeatureDetector.java  Feature2D.java  GFTTDetector.java  KAZE.java  MSER.java  ORB.java
(+30 files in other folders)
